# profanity-filter-docker

./: .dockerignore  .editorconfig  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  _config.yml  artifacthub-repo.yml  devbox.json  docker-compose.yaml  index.html  index.yaml  mkdocs.yaml  pyproject.toml
.github/workflows/: build-and-deploy.yaml  build-and-push.yaml  build.yaml  deploy-demo.yaml  lint.yaml  publish.yaml  release-charts.yaml  release-docs.yaml  test-lint.yaml  test-migration.yaml  test-pytest.yaml  test.yaml
charts/profanity-filter-docker/: Chart.yaml  values.yaml
charts/profanity-filter-docker/templates/: _helpers.tpl  migrations-job.yaml
charts/profanity-filter-docker/templates/admin/: deployment.yaml  ingress.yaml  service.yaml
charts/profanity-filter-docker/templates/api/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  servicemonitor.yaml
demo/: .sops.yaml  Chart.yaml  secrets.yaml  values.yaml
demo/charts/: profanity-filter-1.0.0.tgz  profanity-filter-docker-0.1.0.tgz
developer-guide/: index.html
developer-guide/adding-providers/: index.html
developer-guide/installation/: index.html
docs/: index.md
docs/developer-guide/: adding-providers.md  installation.md
docs/user-guide/: installation.md
migrations/models/: 0_20240324175451_init.py  0_20240407140456_init.py
scripts/: migration_check.sh
search/: search_index.json
service/: __main__.py  admin.py  config.py  conftest.py  monitoring.py  orm.py  test_utils.py
service/core/: postgres.py  redis.py
service/entrypoints/: admin.py  api.py
service/filtering/: admin.py  models.py  routes.py  schemas.py
service/filtering/providers/: base.py  manager.py  profanity_filter.py
service/filtering/providers/tests/: test_profanity_filter.py
service/filtering/tests/: factories.py  test_routes.py
service/providers/: base.py  get_provider.py  profanity_filter.py
service/word_lists/: admin.py  manager.py  models.py  routes.py  schemas.py
service/word_lists/tests/: factories.py  test_routes.py
user-guide/: index.html
user-guide/configuration/: index.html
user-guide/installation/: index.html
