[tool.poetry]
name = "profanity-filter-docker"
version = "0.1.0"
description = ""
authors = ["huscker <egostalker03@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
profanity-filter = {git = "https://github.com/huscker/profanity-filter.git", extras = ["deep-analysis", "pymorphy2-ru"]}
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
fastapi-admin = "^1.0.4"
tortoise-orm = "^0.20.0"
prometheus-fastapi-instrumentator = "^7.0.0"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.5.post1"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
